force-app/main/default/objects/CventEvents__RecordMatchingRule__c/fields/CventEvents__Action__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Action__c</fullName>
    <description>Type of action to be performed.</description>
    <inlineHelpText>Type of action to be performed.</inlineHelpText>
    <label>Action</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>