force-app/main/default/objects/CventEvents__RecordMatchingRule__c/fields/CventEvents__AssignmentRule__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AssignmentRule__c</fullName>
    <description>Indicates the assignment rule to be applied in case of &quot;No Action&quot; scenario.</description>
    <inlineHelpText>Indicates the assignment rule to be applied in case of &quot;No Action&quot; scenario.</inlineHelpText>
    <label>Assignment Rule</label>
    <length>40</length>
    <type>Text</type>
</CustomField>