force-app/main/default/objects/CventEvents__RecordMatchingRule__c/fields/CventEvents__RecordIdToAssign__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RecordIdToAssign__c</fullName>
    <description>Account/User record Id used to assign to in case of &quot;No Action&quot; scenario.</description>
    <inlineHelpText>Account/User record Id used to assign to in case of &quot;No Action&quot; scenario.</inlineHelpText>
    <label>Record Id To Assign</label>
    <length>18</length>
    <type>Text</type>
</CustomField>